<resources>

    <string name="app_name">Findoor Demo</string>

    <string name="time_format_pattern">HH:mm:ss dd/MM/yyyy</string>
    <string name="date_format_pattern">dd-MM-yyyy</string>

    <string name="record_location">Record location</string>
    <string name="view_location">Visualize location</string>
    <string name="compare_locations">Compare locations</string>
    <string name="list_locations">List locations</string>
    <string name="set_alias_location">Set alias</string>
    <string name="try_location">Try locations</string>
    <string name="remove_location">Delete location</string>
    <string name="export_location">Export location</string>
    <string name="import_location">Import location</string>

    <string name="list_locations_msg">Error: there was a problem listing locations.</string>
    <string name="list_locations_title">Locations with records</string>
    <string name="location_error_msg">Error: invalid location.</string>
    <string name="set_alias_location_success">Alias saved successfully</string>
    <string name="set_alias_location_title">Alias</string>
    <string name="location_label">Location:</string>
    <string name="alias_label">Alias:</string>
    <string name="set_alias_button">Set</string>
    <string name="format_error_msg">Error: invalid format.</string>
    <string name="ask_date_subtitle">Use following pattern: </string>
    <string name="ask_date_title">Set time</string>
    <string name="ask_date_set">Set</string>

    <string name="explain_permissions_title">Permissions</string>
    <string name="explain_permissions_msg">These permissions are required.</string>

    <!-- Record -->
    <string name="permissions_error_msg">Error: required permissions are not granted.</string>
    <string name="wifi_disabled_error_msg">Error: wifi is disabled. Enable it and try again.</string>
    <string name="gps_disabled_title">Location</string>
    <string name="gps_disabled_message">Location service must be enabled. This is a mandatory requirement in some devices to provide wifi data.</string>
    <string name="start_record">Start</string>
    <string name="stop_record">Stop</string>
    <string name="record_time">Time</string>
    <string name="go_location_setting">Settings</string>
    <string name="close_location_dialog">Close</string>

    <!-- View -->
    <string name="load_location_info">Load</string>
    <string name="close_location_info">Close</string>
    <string name="samples_label">Samples count:</string>
    <string name="first_timestamp_label">First record:</string>
    <string name="last_timestamp_label">Last record:</string>
    <string name="interval_from_label">|- From:</string>
    <string name="interval_to_label">|- To:</string>
    <string name="interval_view">View</string>
    <string name="interval_close">Close</string>
    <string name="samples_value">%1$d samples</string>
    <string name="interval_error_msg">Error: invalid selected interval.</string>
    <string name="samples_error_msg">Error: invalid records samples count.</string>
    <string name="processing_error_msg">Error: processing records.</string>

    <!-- Delete -->
    <string name="delete_success_msg">Deleted successfully</string>
    <string name="delete_error_msg">Error: there was a problem while deleting.</string>
    <string name="delete_confirmation">Do you confirm you want to delete?</string>
    <string name="delete_location_button">Delete location</string>
    <string name="delete_location_interval_button">Delete interval</string>
    <string name="delete_with_less_samples_button">Delete samples</string>
    <string name="delete_with_less_samples">|- With less samples than:</string>
    <string name="delete_all">Delete all</string>

    <!-- Compare -->
    <string name="location_A_label">Target</string>
    <string name="location_B_label">Test</string>
    <string name="compare_locations_button">Compare</string>

    <string name="raw_gap_label">Raw gap</string>
    <string name="net_gap_label">Net gap</string>
    <string name="mean_raw_gap">Raw mean gap</string>
    <string name="mean_net_gap">Net mean gap</string>
    <string name="mean_raw_gap_ignoring">Raw mean gap (ignoring)</string>
    <string name="mean_net_gap_ignoring">Net mean gap (ignoring)</string>
    <string name="similarity">Similarity</string>

    <!-- Trial -->
    <string name="locations_label">Localizaciones:</string>
    <string name="locations_error_msg">Error: invalid locations. It uses comma as separator. It needs two at least.</string>

    <!-- Import -->
    <string name="import_error_serialization">Error reading file (wrong serialization)</string>
    <string name="import_error_empty">Error reading file (it is empty)</string>
    <string name="import_error_file">Error reading file</string>
    <string name="import_error">Error importing from that selected file</string>
    <string name="import_success">Import finished successfully</string>
    <string name="error_kitkat_version">Android Kitkat version or higher is required for this feature</string>

    <!-- Export -->
    <string name="export_error_file">There was an error writing</string>
    <string name="export_success">Export finished successfully</string>
    <string name="export_error">Error exporting into that selected file</string>
    <string name="export_ask_location_title">Location to export</string>
    <string name="export_ask_location_confirm">Export</string>

</resources>
