<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/tv_location_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/location_label"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="@dimen/activity_margin"
        android:layout_marginStart="@dimen/activity_margin"
        android:layout_marginLeft="@dimen/activity_margin" />

    <EditText
        android:id="@+id/et_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/tv_location_label"
        app:layout_constraintBottom_toBottomOf="@+id/tv_location_label"
        app:layout_constraintRight_toLeftOf="@+id/btn_start_record"
        app:layout_constraintLeft_toRightOf="@+id/tv_location_label"
        android:maxLength="4"
        android:textAlignment="center"
        android:inputType="number"
        tools:text="0"/>

    <Button
        android:id="@+id/btn_start_record"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/start_record"
        style="@style/Widget.AppCompat.Button.Colored"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_location_label"
        app:layout_constraintBottom_toBottomOf="@id/tv_location_label"
        android:layout_marginEnd="@dimen/activity_margin"
        android:layout_marginRight="@dimen/activity_margin" />

    <Button
        android:id="@+id/btn_stop_record"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/stop_record"
        style="@style/Widget.AppCompat.Button.Colored"
        app:layout_constraintTop_toTopOf="@+id/btn_start_record"
        app:layout_constraintRight_toRightOf="@+id/btn_start_record"
        app:layout_constraintBottom_toBottomOf="@+id/btn_start_record"
        app:layout_constraintLeft_toLeftOf="@+id/btn_start_record"/>

    <View
        android:id="@+id/v_header_separator"
        android:layout_width="0dp"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/btn_start_record"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimaryDark" />

    <LinearLayout
        android:id="@+id/container_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/v_header_separator"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/record_time_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:textStyle="bold"
            android:text="@string/record_time"/>

        <TextView
            android:id="@+id/record_time_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:visibility="invisible"
            tools:text="14:50:55 15/01/2018"
            android:layout_marginLeft="8dp" />

    </LinearLayout>

    <View
        android:id="@+id/v_time_separator"
        android:layout_width="0dp"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@+id/container_time"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@color/colorPrimaryDark" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view_records"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        app:layout_constraintTop_toBottomOf="@id/v_time_separator"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</android.support.constraint.ConstraintLayout>