<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <View
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:id="@+id/view_middle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tv_locations_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/locations_label"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="@dimen/activity_margin"
        android:layout_marginStart="@dimen/activity_margin"
        android:layout_marginLeft="@dimen/activity_margin" />

    <EditText
        android:id="@+id/et_locations"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/tv_locations_label"
        app:layout_constraintBottom_toBottomOf="@+id/tv_locations_label"
        app:layout_constraintRight_toLeftOf="@+id/btn_start_trial"
        app:layout_constraintLeft_toRightOf="@+id/tv_locations_label"
        android:textAlignment="center"
        android:inputType="text"
        tools:text="0, 1, 2, 3"/>

    <Button
        android:id="@+id/btn_start_trial"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/start_record"
        style="@style/Widget.AppCompat.Button.Colored"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_locations_label"
        app:layout_constraintBottom_toBottomOf="@id/tv_locations_label"
        android:layout_marginEnd="@dimen/activity_margin"
        android:layout_marginRight="@dimen/activity_margin" />

    <Button
        android:id="@+id/btn_stop_trial"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/stop_record"
        android:visibility="invisible"
        style="@style/Widget.AppCompat.Button.Colored"
        app:layout_constraintTop_toTopOf="@+id/btn_start_trial"
        app:layout_constraintRight_toRightOf="@+id/btn_start_trial"
        app:layout_constraintBottom_toBottomOf="@+id/btn_start_trial"
        app:layout_constraintLeft_toLeftOf="@+id/btn_start_trial"/>

    <View
        android:id="@+id/v_header_separator"
        android:layout_width="0dp"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/btn_start_trial"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/tv_samples_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/v_header_separator"
        app:layout_constraintRight_toRightOf="@+id/view_middle"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        android:text="@string/samples_label"/>

    <TextView
        android:id="@+id/tv_samples_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/tv_samples_label"
        app:layout_constraintBottom_toBottomOf="@+id/tv_samples_label"
        app:layout_constraintLeft_toRightOf="@+id/tv_samples_label"
        android:layout_marginStart="4dp"
        tools:text="1000"
        android:layout_marginLeft="4dp" />

    <View
        android:id="@+id/v_samples_separator"
        android:layout_width="0dp"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_samples_label"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@color/colorPrimaryDark" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view_result"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        app:layout_constraintTop_toBottomOf="@id/v_samples_separator"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</android.support.constraint.ConstraintLayout>